# PUJ_Ogre

./: CMakeLists.txt  README.md
apps/: CMakeLists.txt
apps/OBJViewer/: CMakeLists.txt  main.cxx
apps/Tejo/: CMakeLists.txt  main.cxx
apps/Tejo/resources/: CMakeLists.txt  material.material
bash/: CMakeLists.txt  ParametricViewer.cxx  VTK2OBJ.cxx
data/: default.material  material.material  sphere.scenexx
lib/: CMakeLists.txt
lib/PUJ_Ogre/: BaseApplication.cxx  BaseApplication.h  BaseApplicationWithBullet.cxx  BaseApplicationWithBullet.h  BaseApplication_VTK.cxx  CMakeLists.txt  CameraMan.cxx  CameraMan.h  Config.h.in  OBJReader.cxx  OBJReader.h  OBJReader.hxx  OgreBullet.cxx  OgreBullet.h
plugins/: CMakeLists.txt
plugins/DotXXSceneLoader/: CMakeLists.txt
plugins/DotXXSceneLoader/PUJ_Ogre/: DotXXSceneLoader.cxx  DotXXSceneLoader.h  DotXXSceneLoader_parametric2.cxx  ParametricFunction.cxx  ParametricFunction.h
src/: CMakeLists.txt
src/Hanoi/: CMakeLists.txt  Hanoi.cxx
src/Hanoi/resources/: material.material
src/ParabolicMotion/: CMakeLists.txt  ParabolicMotion.cxx
src/ParabolicMotion/resources/: CMakeLists.txt  materials.material
src/TestBullet/: CMakeLists.txt  main.cxx
tools/: CMakeLists.txt  ConvertVTKToMesh.cxx
tools/ConvertVTKToMesh/: Application.cxx  Application.h  CMakeLists.txt  main.cxx
