## =========================================================================
## @author Leonardo Florez-Valencia (florez-l@javeriana.edu.co)
## =========================================================================

add_executable(PUJ_Ogre_bash_VTK2OBJ VTK2OBJ.cxx)
target_link_libraries(PUJ_Ogre_bash_VTK2OBJ ${VTK_LIBRARIES})

## eof - CMakeLists.txt
